# forecasts

./: .gitignore  README.md  pyproject.toml  setup.cfg
docker/: docker-compose.yml
notebooks/: Weather Analytics Example.ipynb  Weather Request Example.ipynb
src/: client.py  utils.py
src/db/: classes.py  client.py  mappers.py  models.py
tests/: __init__.py  conftest.py  test_client.py  test_utils.py
tests/resources/: response_example.json
tests/test_db/: conftest.py  test_client.py  test_mappers.py
