[tool.poetry]
name = "forecasts"
version = "0.0.1"
description = "Loading of weather forecasts"
authors = ["y"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
matplotlib = "^3.3.1"
numpy = "^1.19.1"
pandas = "^1.1.0"
ipython = "^7.17.0"
notebook = "^6.1.3"
aiohttp = "^3.6.2"
databases = {extras = ["postgresql", "sqlite"], version = "^0.3.2"}
psycopg2 = "^2.8.5"
layered-yaml-attrdict-config = "^18.12.3"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
pytest-cov = "^2.10.1"
pytest-testmon = "^1.0.3"
pytest-timeout = "^1.4.2"
pytest-mock-server = "^0.2.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
